# scidown

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFESTO.md  Makefile  README.md  meson.build  scidown.css
examples/: about.html  about.md  abstract.md  example.md  example_article.html  example_article.md  example_article.tex  example_report.html  example_report.md  example_report.tex  references.md  scidown.css  scidown_article.css  scidown_report.css  test.html  test.md  test.tex
resources/css/: scidown_article.css  scidown_report.css
src/: ast.c  ast.h  autolink.c  buffer.c  buffer.h  constants.c  constants.h  def_parser.c  document.c  document.h  html.c  html.h  html_smartypants.c  latex.c  latex.h  parser.c  parser.h  utils.c  utils.h
src/charter/csv_parser/: csvparser.h
src/mtex2MLL/: parser.h
test/Tests/: Formatting in Table of Contents.html  Math.html
